# dotfiles

./: .gitignore  .gitmodules  README.docx  README.md  README.rst  abbreviations.fish  alias.fish  bundle  bundle.linux  config.fish  create_home_symlinks.py  fish_plugins  fish_variables  init.fish  init_home.py  install.fish  installation.linux.sh  io.nachtalb.running-sites.plist  key_bindings.fish  link_home.py  pyproject.toml  requirements.txt
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
HOME_SYMLINKS/: .gitconfig  .global_gitignore  .pdbrc  .pythonrc  .tmux.conf  .vimrc  docker-compose.yml
HOME_SYMLINKS/.buildout/: default.cfg
HOME_SYMLINKS/.pip/: pip.conf
HOME_SYMLINKS/.vim/: .netrwhist
HOME_SYMLINKS/.vim_runtime/: basic.vim  filetypes.vim  plugins.vim
_symlinks/: .gitconfig  .global_gitignore  .pythonrc  .tmux.conf  gpg.pub  id_ed25519.pub  id_rsa.pub
completions/: dotfiles.fish  git.fish  gl.fish
conf.d/: .gitnow  abbriviations.fish  alias.fish  ccopy.fish
functions/: __history_double_exclamation.fish  catbox.fish  ccopy.fish  copy.fish  cpaste.fish  dotfiles.fish  dotfiles_install_symlinks.fish  gh.fish  gl.fish  hv.fish.secret  litterbox.fish  run.fish  vim.fish  vpn.fish.secret
home_dir/: .gitconfig
scripts/: git-p-completion.fish  instance  iterm2_shell_integration.fish  misc.fish  n-func.fish  remove-merged-git-branches-completion.fish
settings.default/: README.md
setup/: 00_ssh.fish  01_install_symlinks.fish  02_default_settings.fish  03_fisher.fish
to_be_converted/: ftw.sh
(+15 files in other folders)
