[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Nachtalb <na@nachtalb.io>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
pynvim = "^0.4.3"
xdg-open-wsl = { git = "https://github.com/Nachtalb/xdg-open-wsl", rev = "master" }
defaultpoetry = { git = "https://github.com/Nachtalb/defaultpoetry" }
argcomplete = "^3.2.2"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
ruff-lsp = "^0.0.52"
mypy = "^1.8.0"
pycodestyle = "^2.10.0"
isort = "^5.13.2"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
